--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.2.0",
     "react-body-classname": "^1.2.0",
     "react-dom": "^16.2.0",
+    "react-font-face": "^0.2.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
