--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.2.0",
     "react-font-face": "^0.2.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-weathericons": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
